sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ')' expected but ';' found.
		swapped = false;
                               ^AlgBubbleSort1:6: error: 'while' expected but 'for' found.
		for (i <- 0 to getNombreValeur() - 2 by -1) {
                ^AlgBubbleSort1:15: error: '(' expected but '}' found.
}
^